.stack-work/logs/vector-th-unbox-0.2.1.6.log
Configuring vector-th-unbox-0.2.1.6...
clang: warning: argument unused during compilation: '-nopie' [-Wunused-command-line-argument]
Preprocessing library for vector-th-unbox-0.2.1.6..
Building library for vector-th-unbox-0.2.1.6..

[;1mData/Vector/Unboxed/Deriving.hs:18:21: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     warning: treating Unicode character <U+2212> as identifier character rather than as '-' symbol [-Wunicode-homoglyph][0m[0m
[;1m[34m   |[0m[0m
[;1m[34m18 |[0m[0m Copyright:   © 2012−[;1m[31m2[0m[0m015 Liyang HU
[;1m[34m   |[0m[0m[;1m[31m                     ^[0m[0m
[0m[0m[0mCopyright:   © 2012−2015 Liyang HU
                   ^
1 warning generated.
[1 of 1] Compiling Data.Vector.Unboxed.Deriving ( Data/Vector/Unboxed/Deriving.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Data/Vector/Unboxed/Deriving.o )
Installing library in /Users/brett/.stack/snapshots/x86_64-osx/lts-12.19/8.4.4/lib/x86_64-osx-ghc-8.4.4/vector-th-unbox-0.2.1.6-4zK7oCb71eH1479ZMEneUA
Registering library for vector-th-unbox-0.2.1.6..
